--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>First Impression</title>
+  <title>SkillAmp</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="./assets/First Impression 3-04.jpg">
+  <link rel="icon" type="image/x-icon" href="../assets/skillamp-favicon.png">
 </head>
 <body>
   <app-root></app-root>
